# cmake_minimum_required(VERSION <specify CMake version here>)
project(HappyCoding)

set(CMAKE_CXX_STANDARD 14)

add_executable(HappyCoding main.cpp p5.cpp p5.h p13.cpp p13.h p15.cpp p15.h Sales_data.h p66.cpp p66.h range4practice.cpp range4practice.h iteratorPractice.cpp iteratorPractice.h twoPointSearch.cpp twoPointSearch.h)